--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ textarea {
   min-Height: 100%;
   margin: 0;
   padding: 0;
-  background-image: url(../Assets/Spring-Play.jpg);
+  background-image: url(./Spring-Play.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
